--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,16 @@
 .app__container {
-  background: red;
+}
+
+.header {
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+  background-color: #21D4FD;
+  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+
 }
 
 .train__card {
-
+  padding: 10px;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 2px -2px rgba(0,0,0,0.4);
 }
