--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,16 +1,41 @@
 .app__container {
 }
 
+.gradient {
+  background-color: #21D4FD;
+  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+}
+
 .header {
   padding: 10px;
   border-bottom: 1px solid #ccc;
-  background-color: #21D4FD;
-  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-
 }
 
 .train__card {
   padding: 10px;
   border: 1px solid #ccc;
-  box-shadow: 0 4px 2px -2px rgba(0,0,0,0.4);
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 5px 10px;
+}
+
+.autocomplete__item:hover {
+  cursor: pointer;
+}
+
+/* autocomplete */
+.autocomplete__input {
+  width: 100%;
+  border-radius: 5px;
+  height: 70px;
+  font-size: 20px;
+}
+
+.autocomplete__options {
+  padding: 0;
+  list-style-type: none;
+}
+
+.autocomplete__item {
+  padding: 10px;
+  font-size: 2em;
+  border: 1px solid #aaaaaa;
 }
