--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #53f;
+  --primary-color: #466FFF;
   --text-color: #fff;
   --secondary-text-color: #444444;
   --tertiary-text-color: #7A7A7A;
